# ocr_service

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  context.py  dependencies.py
app/api/routers/: audit.py  dlq.py  extract.py  health.py  me.py  review.py  schemas.py
app/api/schemas/: __init__.py  common.py  dlq.py  document.py  schema_registry.py  tenant.py
app/db/: __init__.py  base.py  models.py  session.py
app/domain/: __init__.py  circuit_breaker.py  confidence.py  embeddings.py  encryption.py  llm.py  storage.py  webhook.py
app/domain/guardrails/: __init__.py  base.py  injection.py  text_quality.py
app/observability/: __init__.py  logging.py  metrics.py  pii_filter.py
app/pipeline/: __init__.py  checkpoint.py  extraction.py  graph.py  nodes.py  prompts.py  state.py
app/pipeline/parsers/: __init__.py  base.py  llamaparse.py  local.py
app/services/: __init__.py  audit.py  auth.py  erasure.py  ingest.py  qdrant.py  rate_limit.py  review.py  schema_registry.py  webhook_delivery.py
app/worker/: __init__.py  __main__.py  cancellation.py  pool.py  runner.py
deploy/: Dockerfile  docker-compose.yml
deploy/kubernetes/: api-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secrets.yaml  worker-deployment.yaml
docs/: MVP_STATUS.md  PRODUCT_SPEC.md
docs/sdlc/: 01-product-spec.ctx.md  01-product-spec.md  02-requirements.ctx.md  02-requirements.md  03-architecture.ctx.md  03-architecture.md  04-data-model.ctx.md  04-data-model.md  05-estimation.ctx.md  05-estimation.md  08-sprint-plan.ctx.md  08-sprint-plan.md  SP-001-langgraph-checkpoint-recovery.md  SP-002-llamaparse-spike.md  SP-003-gdpr-inflight-erasure.md
docs/sprint1/: README.md  TESTING.md  parse_pdf_smoke.py
docs/sprint2/: AUTH.md  README.md
docs/sprint3/: README.md  TESTING.md
docs/sprint4/: README.md
docs/sprint5/: README.md
docs/sprint6/: README.md
migrations/: alembic.ini  env.py
migrations/versions/: 001_initial_schema.py  002_rls_policies.py  003_audit_triggers.py  004_auth_function.py  005_checkpoint_grant.py
tests/: conftest.py  fakes.py
tests/integration/: test_audit.py  test_audit_export.py  test_auth_flow.py  test_dlq_api.py  test_erasure.py  test_ingest.py  test_migrations.py  test_review.py  test_review_actions.py  test_rls.py  test_schema_lifecycle.py  test_schemas_crud.py  test_webhook_delivery.py
tests/unit/: test_auth.py  test_checkpoint_recovery.py  test_circuit_breaker.py  test_confidence.py  test_encryption.py  test_extraction.py  test_guardrails.py  test_health.py  test_llamaparse.py  test_llm_provider.py  test_parsers.py  test_pii_filter.py  test_pipeline.py  test_qdrant_service.py  test_rate_limit.py  test_storage.py  test_webhook.py  test_worker_pool.py
