[project]
name = "ocr-service"
version = "0.1.0"
description = "Enterprise OCR / document-extraction platform (LangChain + LangGraph + LlamaParse + Qdrant)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "OCR Platform Team" }]

dependencies = [
    # --- Web / API ---
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.34,<0.35",
    "python-multipart>=0.0.18",
    # --- Config / settings ---
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<1.15",
    # --- Auth ---
    "pyjwt[crypto]>=2.10,<3.0",
    # --- LLM orchestration ---
    "langchain>=0.3,<0.4",
    "langgraph>=0.2.50,<0.3",
    "langgraph-checkpoint-postgres>=2.0,<3.0",
    "psycopg[binary,pool]>=3.2,<4.0",   # required by langgraph-checkpoint-postgres
    "langchain-anthropic>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",
    # --- Parsing ---
    "llama-parse>=0.5,<0.6",
    "pdfplumber>=0.11,<0.12",
    "pytesseract>=0.3.13,<0.4",
    # --- Vector DB ---
    "qdrant-client>=1.12,<2.0",
    # --- HTTP client (webhooks, external APIs) ---
    "httpx>=0.28,<0.29",
    # --- Observability ---
    "structlog>=24.4,<25.0",
    "prometheus-client>=0.21,<0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=6.0,<7.0",
    "ruff>=0.8,<0.9",
    "mypy>=1.13,<2.0",
    "psycopg[binary]>=3.2,<4.0",   # sync driver for Alembic + test setup
    "asgi-lifespan>=2.1,<3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC", "RUF"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "pdfplumber.*",
    "pytesseract.*",
    "llama_parse.*",
    "qdrant_client.*",
    "langgraph.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "integration: tests requiring a live Postgres/Qdrant (deselect with -m 'not integration')",
]
